# CS_TA_work_week5

./: .gitignore  1_AFM_Imperfect_Probe_difference_model&evals.ipynb  README.md  pyproject.toml
src/starter_code/: ai-comments.py  chatgpt_solution_1.py  chatgpt_solution_2.py  problem1.py
